some more changes

--- a/src/componnets/styels.css
+++ b/src/componnets/styels.css
@@ -2997,7 +2997,11 @@ video {
   .no-print {
     display: none;
   }
+  .margin {
+    margin: 0;
+  }
 }
+
 .center-button-container {
   display: flex;
   justify-content: center;
